# PaidSocialNav

./: .env.example  .env.production.example  .gitignore  .pr_body_issue_20.md  .pre-commit-config.yaml  BENCHMARKS_IMPLEMENTATION.md  CLAUDE.md  Dockerfile  ISSUE_15_COMPLETE.md  ISSUE_16_COMPLETE.md  ISSUE_18_COMPLETE.md  ISSUE_31_COMPLETE.md  ISSUE_4_COMPLETE.md  Makefile  README.md  claude-review.sh  pyproject.toml  run_mcp_server.sh  test_benchmarks.py  test_phase4_audit.py  test_phase4_real.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
configs/: audit_creative_test.yaml  audit_puttery.yaml  audit_puttery_18mo.yaml  audit_test.yaml  tenants.yaml
data/: ad_metadata_template.csv  benchmarks_performance.csv  test_ad_metadata.csv
docs/: CUSTOMER_ONBOARDING.md  DEMOGRAPHIC_FEATURE_SUMMARY.md  RUNBOOK.md  benchmarks.md  demographic_breakdowns.md  dimension_sync.md  google-sheets-setup.md  pdf-export.md
mcp_server/: auth.py  config.py  error_handling.py  monitoring.py  prompts.py  rate_limiting.py  resources.py  server.py  tools.py
paid_social_nav/adapters/: TEMPLATE.py  base.py
paid_social_nav/adapters/meta/: adapter.py  dimensions.py
paid_social_nav/audit/: engine.py  rules.py
paid_social_nav/cli/: main.py  output.py
paid_social_nav/core/: config.py  customer_registry.py  enums.py  logging_config.py  models.py  sync.py  tenants.py
paid_social_nav/insights/: __init__.py  generator.py
paid_social_nav/render/: pdf.py  renderer.py
paid_social_nav/render/templates/: audit_report.html.j2  audit_report.md.j2
paid_social_nav/sheets/: __init__.py  exporter.py  formatter.py
paid_social_nav/skills/: __init__.py  audit_workflow.py  base.py
paid_social_nav/storage/: bq.py  gcs.py  secrets.py
paid_social_nav/visuals/: __init__.py  charts.py
reports/: FINAL_STATUS_Demographic_Analysis.md  Puttery_Demographic_Analysis_FINAL.md  Puttery_Demographic_Analysis_Guide.md  Puttery_Demographic_Setup_Status.md  Puttery_Paid_Social_Audit_2025.md  phase4_test_with_insights.html  phase4_test_with_insights.md  phase4_test_without_insights.html  phase4_test_without_insights.md  puttery_audit_20251116.md  puttery_audit_20251121.html  puttery_audit_20251121.md  sample_audit_report.md  test_fixed_report.md  test_phase2_verification.html
reports/direct_test/: puttery_audit_20251121.html  puttery_audit_20251121.md
reports/puttery_18mo_real/: puttery_audit_20251121.html  puttery_audit_20251121.md
scripts/: demo_demographics.sh  deploy_cloud_run.sh  list_customers.py  migrate_tenants_to_registry.py  onboard_customer.py  populate_dim_ad.py  setup_cloud_infrastructure.sh  setup_customer_registry.sh  setup_puttery_project.sh  setup_registry_python.py  sync_puttery_accounts.sh  test_meta_permissions.py  test_remote_mcp.py
sql/: customer_registry_schema.sql
sql/views/: insights_rollups.sql  v_budget_concentration.sql  v_budget_pacing.sql  v_creative_mix.sql  v_demographic_summary.sql  v_demographics.sql  v_structure_split.sql
tests/: test_base_adapter.py  test_cli_output.py  test_dimensions.py  test_error_handling.py  test_insights_cli.py  test_mcp_server.py  test_pdf_export.py  test_rate_limiting.py  test_renderer.py  test_sheets_integration.py  test_skills.py
tests/integration/: test_audit_rendering.py  test_bq_views.py  test_meta_e2e.py
thoughts/shared/plans/: 2025-11-14-open-questions-recommendations.md  2025-11-20-claude-skills-audit-workflow.md  2025-11-23-fastmcp-remote-server-implementation-PHASED.md  2025-11-23-fastmcp-remote-server-implementation.md
thoughts/shared/research/: 2025-11-14-social-media-client-audit-performance.md  (+2 more)
(+2 files in other folders)
