[project]
name = "paid-social-nav"
version = "0.1.0"
description = "Unified social media advertising API for Meta, Reddit, Pinterest, TikTok, and X"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "google-cloud-bigquery>=3.11",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["paid_social_nav*"]
exclude = ["tests*", "sql*", "infra*", "configs*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"

[tool.coverage.run]
source = ["paid_social_nav"]
omit = ["*/tests/*", "*/test_*"]
