[project]
name = "paid-social-nav"
version = "0.1.0"
description = "Unified social media advertising API for Meta, Reddit, Pinterest, TikTok, and X"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "google-cloud-bigquery>=3.11",
  "requests>=2.31",
  "python-json-logger>=2.0.7",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["paid_social_nav*"]
exclude = ["tests*", "sql*", "infra*", "configs*"]

[tool.setuptools.package-data]
"paid_social_nav.render" = ["templates/*.j2"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501", "I001", "N812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"

[tool.coverage.run]
source = ["paid_social_nav"]
omit = ["*/tests/*", "*/test_*"]
